# Roomee

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  setup.sql
roomee-fe/: .pnp.cjs  package.json
roomee-fe/coverage/: clover.xml  coverage-final.json  lcov.info
roomee-fe/coverage/lcov-report/: index.html
roomee-fe/coverage/lcov-report/src/: App.js.html  index.html
roomee-fe/src/: App.js  App.test.js  Password.test.js  Quiz.test.js  Username.test.js  connection_page.html  index.css  loginForm.js  password_page.html  password_page.js  username_page.css  username_page.html  username_page.js  username_page_index.jsx
roomee-fe/src/Pages/: Dummy.jsx  Home.jsx  Match.jsx  Password.jsx  Quiz.jsx  Username.jsx  password_page.jsx  username_page.jsx
roomee-fe/src/__snapshots__/: App.test.js.snap  Quiz.test.js.snap
roomee-fe/src/api_calls/: api.js
roomee-fe/src/components/: displayTile.js  matchDisplay.js  questionGrid.js  questionTile.js
roomie-fe/: .pnp.cjs  package.json
server/roomee_api/: matching_algorithm.py  mock_db_data.py  pyproject.toml  roomee.db  roomee.store  test_match_algorithm.py
server/roomee_api/src/: API_get_send_info.py  backend_create_query.py  backend_create_query_db.py  backend_py_objects.py  insert_query_DB.py  manual_test.py  matching_algoirthm.py  matching_algorithm.py  mock_data_DB.py  mySQL_insert_query_DB.py  roomee_api.py  test_insert_query_DB.py
server/roomee_api/test/: test_insert_query_DB.py  test_roomie_api.py
server/roomie_api/: Dockerfile  pyproject.toml
server/roomie_api/src/: roomie_api.py
(+22 files in other folders)
