[tool.poetry]
name = "roomee-api"
version = "0.1.0"
description = ""
authors = ["Theodore Bartemes <taybartemes@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
